# mls-explained

./: .gitignore  .gitlab-ci.yml  README.md  buildPythonAppAndEnv.nix  default.nix  pinned-nixpkgs.nix
infrastructure/: buildPythonAppAndEnv.nix  default.nix  infrastructure_builder.sh  integration-tests.nix  setup.cfg  setup.py
infrastructure/authserver/: server.py
infrastructure/chatclient/: KeyService.py  chat.py  chat_protocol.py  client.py  client_gui.py  client_tui.py  key_service.py  message.py  user.py
infrastructure/dirserver/: .pylintrc  default.nix  server.py  setup.py
infrastructure/store/: auth_key_store.py  init_key_store.py  message_store.py  store.py
infrastructure/tests/: comp_file_auth_key_store.json  comp_file_init_key_store.json  comp_file_message_store.json  test_auth_key_store.py  test_auth_server.py  test_codestyle.py  test_dir_server.py  (+2 more)
integration_test/: default.nix
libMLS/: .coveragerc  .gitignore  .pylintrc  Cargo.toml  default.nix  example.py  python  setup.cfg  setup.py
libMLS/libMLS/: __init__.py  abstract_application_handler.py  abstract_keystore.py  abstract_message.py  abstract_tree_node.py  blank_tree_node.py  cipher_suite.py  crypto.py  data_tree_node.py  dot_dumper.py  group_context.py  key_schedule.py  local_key_store_mock.py  message_packer.py  messages.py  remote_key_store_mock.py  session.py  state.py  tree.py  tree_math.py  tree_node.py  x25519_cipher_suite.py
libMLS/src/: lib.rs
libMLS/tests/: test_codestyle.py  test_communication.py  test_keyschedule.py  test_message_packing.py  test_messages.py  test_tree.py
(+8 files in other folders)
